# ColorBadgeSimulator

./: .gitignore  Badge.cpp  Badge.hpp  CMakeLists.txt  Gui.cpp  README.md
